crates/parser/tests/snapshots/statements/valid/0043@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "/* TODO: CREATE TABLE types (a geometry(point) NOT NULL); */ SELECT 1;"
---
Parse {
    cst: SourceFile@0..69
      CComment@0..60 "/* TODO: CREATE TABLE ..."
      SelectStmt@60..69
        Select@60..66 "SELECT"
        Whitespace@66..67 " "
        ResTarget@67..68
          AConst@67..68
            Iconst@67..68 "1"
        Ascii59@68..69 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 7,
                                                            val: Some(
                                                                Ival(
                                                                    Integer {
                                                                        ival: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 60..69,
        },
    ],
}
