crates/parser/tests/snapshots/statements/valid/0043@5.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE tablename (colname int NOT NULL DEFAULT nextval('tablename_colname_seq'));"
---
Parse {
    cst: SourceFile@0..87
      CreateStmt@0..87
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Table@7..12 "TABLE"
        Whitespace@12..13 " "
        RangeVar@13..22
          Ident@13..22 "tablename"
        Whitespace@22..23 " "
        Ascii40@23..24 "("
        ColumnDef@24..84
          Ident@24..31 "colname"
          Whitespace@31..32 " "
          TypeName@32..35
            IntP@32..35 "int"
          Whitespace@35..36 " "
          Constraint@36..44
            Not@36..39 "NOT"
            Whitespace@39..40 " "
            NullP@40..44 "NULL"
          Whitespace@44..45 " "
          Constraint@45..84
            Default@45..52 "DEFAULT"
            Whitespace@52..53 " "
            FuncCall@53..84
              Ident@53..60 "nextval"
              Ascii40@60..61 "("
              AConst@61..84
                Sconst@61..84 "'tablename_colname_seq'"
        Ascii41@84..85 ")"
        Ascii41@85..86 ")"
        Ascii59@86..87 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "tablename",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 13,
                        },
                    ),
                    table_elts: [
                        Node {
                            node: Some(
                                ColumnDef(
                                    ColumnDef {
                                        colname: "colname",
                                        type_name: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "int4",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 32,
                                            },
                                        ),
                                        compression: "",
                                        inhcount: 0,
                                        is_local: true,
                                        is_not_null: false,
                                        is_from_type: false,
                                        storage: "",
                                        raw_default: None,
                                        cooked_default: None,
                                        identity: "",
                                        identity_sequence: None,
                                        generated: "",
                                        coll_clause: None,
                                        coll_oid: 0,
                                        constraints: [
                                            Node {
                                                node: Some(
                                                    Constraint(
                                                        Constraint {
                                                            contype: ConstrNotnull,
                                                            conname: "",
                                                            deferrable: false,
                                                            initdeferred: false,
                                                            location: 36,
                                                            is_no_inherit: false,
                                                            raw_expr: None,
                                                            cooked_expr: "",
                                                            generated_when: "",
                                                            nulls_not_distinct: false,
                                                            keys: [],
                                                            including: [],
                                                            exclusions: [],
                                                            options: [],
                                                            indexname: "",
                                                            indexspace: "",
                                                            reset_default_tblspc: false,
                                                            access_method: "",
                                                            where_clause: None,
                                                            pktable: None,
                                                            fk_attrs: [],
                                                            pk_attrs: [],
                                                            fk_matchtype: "",
                                                            fk_upd_action: "",
                                                            fk_del_action: "",
                                                            fk_del_set_cols: [],
                                                            old_conpfeqop: [],
                                                            old_pktable_oid: 0,
                                                            skip_validation: false,
                                                            initially_valid: false,
                                                        },
                                                    ),
                                                ),
                                            },
                                            Node {
                                                node: Some(
                                                    Constraint(
                                                        Constraint {
                                                            contype: ConstrDefault,
                                                            conname: "",
                                                            deferrable: false,
                                                            initdeferred: false,
                                                            location: 45,
                                                            is_no_inherit: false,
                                                            raw_expr: Some(
                                                                Node {
                                                                    node: Some(
                                                                        FuncCall(
                                                                            FuncCall {
                                                                                funcname: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "nextval",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                args: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            AConst(
                                                                                                AConst {
                                                                                                    isnull: false,
                                                                                                    location: 61,
                                                                                                    val: Some(
                                                                                                        Sval(
                                                                                                            String {
                                                                                                                sval: "tablename_colname_seq",
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                agg_order: [],
                                                                                agg_filter: None,
                                                                                over: None,
                                                                                agg_within_group: false,
                                                                                agg_star: false,
                                                                                agg_distinct: false,
                                                                                func_variadic: false,
                                                                                funcformat: CoerceExplicitCall,
                                                                                location: 53,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            cooked_expr: "",
                                                            generated_when: "",
                                                            nulls_not_distinct: false,
                                                            keys: [],
                                                            including: [],
                                                            exclusions: [],
                                                            options: [],
                                                            indexname: "",
                                                            indexspace: "",
                                                            reset_default_tblspc: false,
                                                            access_method: "",
                                                            where_clause: None,
                                                            pktable: None,
                                                            fk_attrs: [],
                                                            pk_attrs: [],
                                                            fk_matchtype: "",
                                                            fk_upd_action: "",
                                                            fk_del_action: "",
                                                            fk_del_set_cols: [],
                                                            old_conpfeqop: [],
                                                            old_pktable_oid: 0,
                                                            skip_validation: false,
                                                            initially_valid: false,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        fdwoptions: [],
                                        location: 24,
                                    },
                                ),
                            ),
                        },
                    ],
                    inh_relations: [],
                    partbound: None,
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [],
                    oncommit: OncommitNoop,
                    tablespacename: "",
                    access_method: "",
                    if_not_exists: false,
                },
            ),
            range: 0..86,
        },
    ],
}
