crates/parser/tests/snapshots/statements/valid/0043@8.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "/* TODO: CREATE TABLE films2 AS SELECT * FROM films; */ SELECT 1;"
---
Parse {
    cst: SourceFile@0..64
      CComment@0..55 "/* TODO: CREATE TABLE ..."
      SelectStmt@55..64
        Select@55..61 "SELECT"
        Whitespace@61..62 " "
        ResTarget@62..63
          AConst@62..63
            Iconst@62..63 "1"
        Ascii59@63..64 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 7,
                                                            val: Some(
                                                                Ival(
                                                                    Integer {
                                                                        ival: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 55..64,
        },
    ],
}
