crates/parser/tests/snapshots/statements/valid/0043@9.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "/* TODO: CREATE TEMPORARY TABLE films_recent ON COMMIT DROP AS SELECT * FROM films WHERE date_prod > $1; */ SELECT 1;"
---
Parse {
    cst: SourceFile@0..116
      CComment@0..107 "/* TODO: CREATE TEMPO ..."
      SelectStmt@107..116
        Select@107..113 "SELECT"
        Whitespace@113..114 " "
        ResTarget@114..115
          AConst@114..115
            Iconst@114..115 "1"
        Ascii59@115..116 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 7,
                                                            val: Some(
                                                                Ival(
                                                                    Integer {
                                                                        ival: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 107..116,
        },
    ],
}
